# tinypets

./: 1single.html  2multi.html  3parallel.html  CNAME  GITHUB-PAGES-SETUP.md  POWERPOINT-CREATION-GUIDE.md  PRESENTATION-UPDATE-GUIDE.md  README.md  _config.yml  concord-nh-weather.html  index.md  pyproject.toml  rossby-waves.html  weather-analysis-nov4-2025.md
enterprise_bridge/: __init__.py  __main__.py  cli.py  mcp_server.py
enterprise_bridge/adapters/: __init__.py  netsuite.py  oracle.py  salesforce.py  sap.py
enterprise_bridge/core/: __init__.py  adapter.py  auth.py  config.py  query.py  schema.py
enterprise_bridge/tests/: conftest.py  test_adapters.py  test_auth.py  test_config.py  test_query.py  test_schema.py
