[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-bridge"
version = "0.1.0"
description = "MCP server for native Claude Code integration with SAP, Salesforce, NetSuite, and Oracle"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
sse = [
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]

[project.scripts]
enterprise-bridge = "enterprise_bridge.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["enterprise_bridge/tests"]

[tool.hatch.build.targets.wheel]
packages = ["enterprise_bridge"]
